--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,32 @@
 {
     "configurations": [
         {
+            "name": "proxy launch",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/proxy",
+            "args": [
+                "3000"
+            ],
+            "stopAtEntry": false,
+            "cwd": "${fileDirname}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                },
+                {
+                    "description": "Set Disassembly Flavor to Intel",
+                    "text": "-gdb-set disassembly-flavor intel",
+                    "ignoreFailures": true
+                }
+            ]
+        },
+        {
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
